--- a/01_Pythonbasics.ipynb
+++ b/01_Pythonbasics.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "05abe709",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "be3f76df",
    "metadata": {},
    "outputs": [
@@ -66,15 +66,96 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4cd367d",
+   "id": "6d943820",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Elif\n",
+    "#age < 5 : ticket price $2\n",
+    "#age < 18 : ticket price $7\n",
+    "#age < 60 : ticket price $25\n",
+    "#age > 60 : ticket price $15\n",
+    "\n",
+    "age=3\n",
+    "if age <5:\n",
+    "    print(\"$2\")\n",
+    "elif age <18:\n",
+    "    print(\"$7\")\n",
+    "elif age<60:\n",
+    "    print(\"$25\")\n",
+    "else:\n",
+    "    print(\"$15\")\n",
+    "\n",
+    "p\n",
+    "[ ]]]]]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "759e6a35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$7\n"
+     ]
+    }
+   ],
+   "source": [
+    "age=5\n",
+    "if age <5:\n",
+    "    print(\"$2\")\n",
+    "elif age <18:\n",
+    "    print(\"$7\")\n",
+    "elif age<60:\n",
+    "    print(\"$25\")\n",
+    "else:\n",
+    "    print(\"$15\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11f705ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$25\n"
+     ]
+    }
+   ],
+   "source": [
+    "age= 60\n",
+    "if age <=5:\n",
+    "    print(\"$2\")\n",
+    "elif age <=18:\n",
+    "    print(\"$7\")\n",
+    "elif age<=60:\n",
+    "    print(\"$25\")\n",
+    "else:\n",
+    "    print(\"$15\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
